templates/external-service.yaml
# Make external hosts accessible
# via the Ingress controller from inside the pods.
apiVersion: v1
kind: Service
metadata:
  name: opnc-local
  namespace: default
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
